<resources>
    <string name="app_name">HealthyShopper</string>
    <string name="pantry_label">Pantry</string>
    <string name="shopping_List_label">Shopping List</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pantry_edit_text">Enter food item for pantry!</string>
    <string name="calculate_btn">Calculate</string>
    <string name="food_value_text">Nutritional value</string>
    <string name="loading">Loading....</string>
    <string name="no_search_term">No Search Term Entered!</string>
    <string name="no_network">No Network, check connection!</string>
    <string name="add_to_pantry_btntxt">Add to Pantry</string>

    <string name="appName">Healthy Shopper</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="button_login">Login</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="not_registered_yet">Not registered yet</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account</string>

    <string name="minus_string">-</string>
    <string name="plus_string">+</string>
    <string name="label_txt">Apple</string>
    <string name="pantry_count">0/5</string>
    <string name="food_txt">Cal: 5, Prt: 5, Fat: 5, Carb: 5</string>
    <string name="Default">Default</string>
    <string name="instructions">Add something new to your shopping list!</string>
    <string name="food_name_hint">Food Name</string>
    <string name="loading_test">Loading...</string>
    <string name="STT_account_info">Account Info</string>
    <string name="minus_total">Minus Total</string>
    <string name="minus_max">Minus Max</string>
    <string-array name="food_array">
        <item>Food 1</item>
        <item>Food 2</item>
    </string-array>
    <string-array name="food_description">
        <item>Description 1</item>
        <item>Description 2</item>
    </string-array>

</resources>