<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_pantry">

    <fragment
        android:id="@+id/navigation_pantry"
        android:name="pace.cs639.healthyshopper.pantry"
        android:label="@string/pantry_label"
        tools:layout="@layout/fragment_pantry" />

    <fragment
        android:id="@+id/navigation_shopping_list"
        android:name="pace.cs639.healthyshopper.shopping_list"
        android:label="@string/shopping_List_label"
        tools:layout="@layout/fragment_shopping_list" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="pace.cs639.healthyshopper.settings"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />



</navigation>